# advent-of-code-2021-rs

./: Cargo.toml
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  main.rs
src/util/: error.rs  parse.rs
