[package]
name = "advent-of-code-2021-rs"
version = "0.1.0"
authors = ["Kelsey Freese <kmfreese@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.nom]
version = "7.1.0"
default-features = false
features = ["alloc"]
